ecmascript/parser/tests/test262-error-references/fail/a7b643867c8f150d.js.stderr
error: Unexpected token `(`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/a7b643867c8f150d.js:1:6
  |
1 | var [(a)] = 0
  |      ^

